--- a/Part_I_exploration.ipynb
+++ b/Part_I_exploration.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Load in your dataset and describe its properties through the questions below. Try and motivate your exploration goals through this section.\n"
+    "> Loading the dataset and describing it's properties.\n"
    ]
   },
   {
