--- a/Part_II_slide_deck.ipynb
+++ b/Part_II_slide_deck.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "source": [
     "### Ride Hours\n",
-    "> Majority of the ride took place during rush/peak hours of the day"
+    "> The majority of rides occurred during the rush/peak hours of the day, indicating that users commonly utilized the service during busy commuting periods."
    ]
   },
   {
@@ -166,7 +166,7 @@
    "metadata": {},
    "source": [
     "### Ride Days\n",
-    "> It appears users ride more during weekends than week days"
+    "> Weekends exhibit higher ride activity compared to weekdays, indicating that users tend to ride more frequently on Saturdays and Sundays."
    ]
   },
   {
@@ -207,7 +207,7 @@
     "\n",
     "### Age and Ride Duration\n",
     "\n",
-    "> There is a negative correlation between duration in seconds and age. As age increases, the ride duration decreases"
+    "> There is a negative correlation between duration in seconds and age. As age increases, the ride duration decreases, indicating a relationship where older individuals tend to have shorter rides compared to younger individuals."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "metadata": {},
    "source": [
     "### Ride Hour by User Type\n",
-    "> Most subscribers and customers ride more in rush hours of the day"
+    "> Both subscribers and customers exhibit higher ride activity during the rush hours of the day. This indicates that users from both categories prefer to ride more frequently during peak commuting hours."
    ]
   },
   {
@@ -279,7 +279,7 @@
    "metadata": {},
    "source": [
     "### Ride days by Gender\n",
-    "> Generally, there is more activity on weekdays than weekends for all the gender types and Thursday appears to be the day with the most rides for all gender."
+    "> Overall, weekdays experience higher ride activity compared to weekends for all gender types. Thursday emerges as the day with the highest number of rides across all genders, indicating a consistent pattern of increased ride demand on that particular day."
    ]
   },
   {
@@ -331,7 +331,9 @@
    "source": [
     "## (Visualization 3)\n",
     "### Ride days across user types and gender \n",
-    "> For all gender types, it is clear that subscribers ride more on weekdays than weekends with Thursday being the ride peak day. For the customer user type, the male  and other gender type, they ride more on Thursday and Friday than other days "
+    "> Subscribers: Subscribers exhibit higher ride activity on weekdays compared to weekends. Thursday stands out as the peak day for rides among subscribers.
+       Customer User Type: For male and other gender types within the customer user category, there is a notable increase in ride activity on Thursday and Friday compared to other days of the week.
+       These insights highlight the distinct ride patterns based on user type and gender. Subscribers prefer weekday rides, with Thursday being the busiest day, while male and other gender types within the customer user category tend to ride more on Thursday and Friday."
    ]
   },
   {
@@ -401,7 +403,7 @@
    "metadata": {},
    "source": [
     "### Ride Duration across user types in different days\n",
-    "> Customer user type appears to have longer rides than subscribers"
+    "> Customer user type tends to have longer rides than subscribers"
    ]
   },
   {
